--- a/pom.xml
+++ b/pom.xml
@@ -108,10 +108,10 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.springframework.boot</groupId>-->
+                <!--<artifactId>spring-boot-maven-plugin</artifactId>-->
+            <!--</plugin>-->
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -153,7 +153,7 @@
                                 implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                         <transformer
                                 implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>com.zhuinden.sparkexperiment.test</mainClass>
+                            <mainClass>com.zhuinden.sparkexperiment.test$</mainClass>
                         </transformer>
                     </transformers>
                 </configuration>
