--- a/pom.xml
+++ b/pom.xml
@@ -153,7 +153,7 @@
                                 implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                         <transformer
                                 implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>com.zhuinden.sparkexperiment.test$</mainClass>
+                            <mainClass>com.zhuinden.sparkexperiment.test</mainClass>
                         </transformer>
                     </transformers>
                 </configuration>
